--- a/app/database_2/templates/form.html
+++ b/app/database_2/templates/form.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+    <h2>Database 2</h2>
+    <form action="" method="post">
+        <p>
+            {{ form.comment.label }}<br>
+            {{ form.username()  }}<br>
+        </p>
+        <p>
+            {{ form.submit() }}
+        </p>
+    </form>
 {% endblock %}
