forms and view comleted - db.commit() functionality broken

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Welcome to the Database Tutorial</h1>
+    <a href="{{url_for(/database_2/db_2_form)}}"></a>
 
     {% block content %}
     {% endblock %}
