--- a/app/database_2/templates/form.html
+++ b/app/database_2/templates/form.html
@@ -5,7 +5,7 @@
     <form action="" method="post">
         <p>
             {{ form.comment.label }}<br>
-            {{ form.username()  }}<br>
+            {{ form.comment()  }}<br>
         </p>
         <p>
             {{ form.submit() }}
