database session committing NB: CHECK WHAT DATA YOU PASS

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Welcome to the Database Tutorial</h1>
-    <a href="{{url_for(/database_2/db_2_form)}}"></a>
+    <a href="{{ url_for('index') }}">Home</a>
+    <a href="{{url_for('database_2.db_2_form')}}">DB 2</a>
 
     {% block content %}
     {% endblock %}
