--- a/app/database_2/templates/form.html
+++ b/app/database_2/templates/form.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h2>Database 2</h2>
     <form action="" method="post">
+        {{ form.hidden_tag() }}
         <p>
             {{ form.comment.label }}<br>
             {{ form.comment()  }}<br>
